<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.azha.android.lastri.MainActivity">

    <!-- <Button
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_large"
         android:onClick="loadSlides"
         android:text="Show Intro Slides Again" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="-15dp"
            android:id="@+id/header_logo"
            android:orientation="vertical"
            android:background="@color/colormain_2">
            <ImageView
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/logo_home"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/toolbar"
            android:orientation="horizontal"
            android:background="@color/colormain_1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_home"
                    android:id="@+id/home"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home"
                    android:text="Home"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_pager"
                    android:id="@+id/antrian"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/antrian"
                    android:text="Antrian"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_favorite"
                    android:id="@+id/favorite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/favorite"
                    android:textSize="12sp"
                    android:text="Favorite"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_histori"
                    android:id="@+id/history"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/history"
                    android:text="History"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginTop="@dimen/crop_10dp"
                    android:layout_marginBottom="@dimen/crop_10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_mobil"
                    android:id="@+id/btn1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn1"
                    android:text="@string/cucisteam"
                    android:textSize="@dimen/font_size_icon"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginTop="@dimen/crop_10dp"
                    android:layout_marginBottom="@dimen/crop_10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_sisir"
                    android:id="@+id/btn2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn2"
                    android:text="@string/barber"
                    android:textSize="@dimen/font_size_icon"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginTop="@dimen/crop_10dp"
                    android:layout_marginBottom="@dimen/crop_10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_garpu"
                    android:id="@+id/btn3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn3"
                    android:text="@string/restoran"
                    android:textSize="@dimen/font_size_icon"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row2"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginTop="@dimen/crop_10dp"
                    android:layout_marginBottom="@dimen/crop_10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_kunci"
                    android:id="@+id/btn4"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn4"
                    android:text="@string/bengkel"
                    android:textSize="@dimen/font_size_icon"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">

                <ImageButton
                    android:id="@+id/btn5"
                    android:layout_width="@dimen/size_icon"
                    android:layout_marginTop="@dimen/crop_10dp"
                    android:layout_marginBottom="@dimen/crop_10dp"
                    android:layout_height="@dimen/size_icon"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_police" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn5"
                    android:text="@string/samsat"
                    android:textSize="@dimen/font_size_icon"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginBottom="@dimen/crop_10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/crop_10dp"
                    android:background="@drawable/icon_ulekan"
                    android:id="@+id/btn6"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn6"
                    android:text="@string/obat"
                    android:textSize="@dimen/font_size_icon"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row3"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginTop="@dimen/crop_10dp"
                    android:layout_marginBottom="@dimen/crop_10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_gedung"
                    android:id="@+id/btn7"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn7"
                    android:text="@string/rumahsakit"
                    android:textSize="@dimen/font_size_icon"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:padding="@dimen/margin_small">

            </RelativeLayout>
        </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bottomtool"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_medium">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black_grey">
                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/btnmain_1"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bottom"
                    android:text="@string/akunsaya"
                    android:textColor="@android:color/white">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black_grey">
                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/btnmain_2"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bottom"
                    android:text="@string/bantuan"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
