<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.azha.android.lastri.MainActivity"
    >

    <!-- <Button
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_large"
         android:onClick="loadSlides"
         android:text="Show Intro Slides Again" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="-15dp"
            android:id="@+id/header_logo"
            android:orientation="vertical"
            android:background="@color/colormain_2">
            <ImageView
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/logo_home"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/toolbar"
            android:orientation="horizontal"
            android:background="@color/colormain_1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_home"
                    android:id="@+id/home"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home"
                    android:text="Home"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_pager"
                    android:id="@+id/antrian"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/antrian"
                    android:text="Antrian"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_favorite"
                    android:id="@+id/favorite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/favorite"
                    android:textSize="12sp"
                    android:text="Favorite"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_small">
                <ImageButton
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="@dimen/margin_large"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/icon_histori"
                    android:id="@+id/history"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/history"
                    android:text="History"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>



        <!-- Frame Layout -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                android:orientation="vertical"
                android:background="#dcdcdc">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="bottom"
                    android:textSize="@dimen/font_title"
                    android:textStyle="bold"
                    android:text="@string/masukan_qr_kode" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:paddingRight="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_bg"/>
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="60dp"
                android:paddingRight="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingBottom="90dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/scan_barcode"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_bg"/>
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomtool"
                android:orientation="horizontal"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black_grey">
                    <Button
                        android:layout_width="match_parent"
                        android:id="@+id/btnmain_1"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_bottom"
                        android:text="@string/akunsaya"
                        android:textColor="@android:color/white">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white">
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black_grey">
                    <Button
                        android:layout_width="match_parent"
                        android:id="@+id/btnmain_2"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_bottom"
                        android:text="@string/bantuan"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
